force-app/main/default/objects/Account_Development_Plan__c/fields/ADP_Review_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ADP_Review_Frequency__c</fullName>
    <label>ADP Review Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>