force-app/main/default/objects/Account_Development_Plan__c/fields/Checked_RTM_Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Checked_RTM_Company_Size__c</fullName>
    <label># Checked RTM Company Size</label>
    <summarizedField>Route_to_Market__c.Number_Checked__c</summarizedField>
    <summaryFilterItems>
        <field>Route_to_Market__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Company Size</value>
    </summaryFilterItems>
    <summaryForeignKey>Route_to_Market__c.Account_Development_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>