force-app/main/default/objects/Account_Development_Plan__c/fields/Days_to_Complete_ADP_Review__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete_ADP_Review__c</fullName>
    <label>Days to Complete ADP Review</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>