force-app/main/default/objects/Account_Development_Plan__c/fields/Ethernet_Order_Target__c.field-meta.xml
<CustomField>
    <fullName>Ethernet_Order_Target__c</fullName>
    <label>Ethernet Order Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>