force-app/main/default/objects/Account_Development_Plan__c/fields/Ethernet_Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Ethernet_Target_Achieved__c</fullName>
    <formula>of_Ethernet_Orders__c /  Ethernet_Order_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ethernet Target Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>