force-app/main/default/objects/Account_Development_Plan__c/fields/FTTP_Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>FTTP_Target_Achieved__c</fullName>
    <formula>of_Broadband_Orders__c / FTTP_Order_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FTTP Target Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>