force-app/main/default/objects/Account_Development_Plan__c/fields/of_Broadband_Orders__c.field-meta.xml
<CustomField>
    <fullName>of_Broadband_Orders__c</fullName>
    <label># of FTTP Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>