force-app/main/default/objects/Account_Development_Plan__c/fields/RTM_Completion__c.field-meta.xml
<CustomField>
    <fullName>RTM_Completion__c</fullName>
    <formula>/* this starts the Image function &amp; asks for a green swatch 10 pixels high */

IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;green&quot;, 10 ,

/* this calculates the number of pixels in width to give completed items */

( Total_RTM_Completion__c * 10)

/* this closes the image function and appends it to the next bit */

)&amp;

/* this starts the Image function &amp; asks for a red swatch 10 pixels high */

IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;red&quot;, 10 ,

/* this calculates the number of pixels in width to give incomplete items */

((7 - Total_RTM_Completion__c)) * 10

/* this closes the image function and appends it to the next bit */

) &amp;

/* this returns the percentage complete in text */

&quot; &quot;&amp; TEXT (ROUND((( Total_RTM_Completion__c / 7 ) * 100

),0)) &amp; &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RTM Completion</label>
    <type>Text</type>
</CustomField>