force-app/main/default/objects/Account_Development_Plan__c/fields/Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target__c</fullName>
    <label>Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>