force-app/main/default/objects/Account_Development_Plan__c/fields/Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Target_Achieved__c</fullName>
    <formula>Won_Revenue__c /  Sales_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>