force-app/main/default/objects/Account_Development_Plan__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <formula>CASE(
Period__c,
&apos;1 Month&apos;, ADDMONTHS( From__c ,1),
&apos;3 Months&apos;, ADDMONTHS( From__c ,3),
&apos;6 Months&apos;, ADDMONTHS( From__c ,6),
&apos;12 Months&apos;, ADDMONTHS( From__c ,12)
,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To</label>
    <type>Date</type>
</CustomField>