force-app/main/default/objects/Account_Development_Plan__c/fields/Total_RTM_Completion__c.field-meta.xml
<CustomField>
    <fullName>Total_RTM_Completion__c</fullName>
    <formula>IF(  Checked_RTM_Company_Size__c &gt;= 1, 1, 0) + 
IF(  Checked_RTM_Location__c &gt;= 1, 1, 0) + 
IF(  Checked_RTM_Sectors__c &gt;= 1, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total RTM Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>