force-app/main/default/objects/Account_Development_Plan__c/fields/Won_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Won_Revenue__c</fullName>
    <label>Won Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>